# spec-server-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
batch_files/: ni_spec_server_proxy.bat
docs/: NI Spec Server Proxy - User Manual.docx  NI Spec Server Proxy HLD.md  SpecServerProxy HLD.md
docs/HLD/: Spec Server Proxy HLD.md  SpecServerProxy HLD.md
ni-spec-server-proxy/: CHANGELOG.md  pyproject.toml
ni-spec-server-proxy/src/ni_spec_server_proxy/: __main__.py  main.py
ni-spec-server-proxy/src/ni_spec_server_proxy/constants/: _common_response.py  _file_uploader.py  _get_minion_id.py
ni-spec-server-proxy/src/ni_spec_server_proxy/helpers/: _error_handler.py  _get_minion_id.py  _get_products_in_scm_format.py  _query_specs_in_scm_format.py
ni-spec-server-proxy/tests/: conftest.py  constants.py
ni-spec-server-proxy/tests/acceptance/: test_workflow.py
ni-spec-server-proxy/tests/integration/: test_products_specs.py  test_upload_measurement.py
ni-spec-server-proxy/tests/unit/: test_get_process_execution_status.py  test_get_products.py  test_get_specs.py  test_upload_measurement.py
ni_spec_server_proxy/: README.md  pyproject.toml
ni_spec_server_proxy/docs/: User Manual.docx
ni_spec_server_proxy/src/ni_spec_server_proxy/: __main__.py
ni_spec_server_proxy/src/ni_spec_server_proxy/constants/: __init__.py  _file_uploader.py  _get_workspace_id.py
ni_spec_server_proxy/src/ni_spec_server_proxy/helpers/: _error_handler.py  _get_workspace_id.py  _query_specs_in_scm_format.py
ni_spec_server_proxy/tests/: conftest.py  constants.py
ni_spec_server_proxy/tests/acceptance/: test_workflow.py
ni_spec_server_proxy/tests/assets/: valid_measurement.csv
ni_spec_server_proxy/tests/unit/: test_get_condition_mappings.py  test_get_process_execution_status.py  test_upload_measurement.py
src/ni_spec_server_proxy/: __init__.py  __main__.py  main.py
src/ni_spec_server_proxy/constants/: _common_response.py  _get_minion_id.py  _get_specs.py  _get_workspace_id.py
src/ni_spec_server_proxy/helpers/: __init__.py  _error_handler.py  _file_uploader.py  _get_workspace_id.py  _query_specs_in_scm_format.py
tests/: conftest.py
tests/acceptance/: test_workflow.py
tests/integration/: test_products_specs.py  test_upload_measurement.py
tests/unit/: test_get_condition_mappings.py  test_get_process_execution_status.py  test_get_products.py  test_get_specs.py  test_upload_measurement.py
