[tool.poetry]
name = "ni_spec_server_proxy"
version = "1.2.1-dev1"
description = "Python package to redirect SCM API calls to SLE APIs to exchange data with SLE Server."
authors = ["NI <opensource@ni.com>"]
repository = "https://github.com/ni/ni-spec-server-proxy"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
packages = [{ include = "ni_spec_server_proxy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.10.9"
yarl = "1.13.0"
flask = { extras = ["async"], version = "^3.0.3" }
nisystemlink-clients = "^1.3.0"
systemlink-sdk = "^24.0.0"
pyyaml = "^6.0.0"
pandas = "^2.0.0"

[[tool.poetry.source]]
name = "NI PyPI"
url = "https://pypi.ni.systems"
priority = "primary"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ni-python-styleguide = "^0.4.6"
mypy = "^1.11.2"
bandit = { version = "^1.7", extras = ["toml"] }
types-PyYAML = { version = "*", optional = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
skips = [
    "B101", # assert_used

]
