[tool.poetry]
name = "ni_spec_server_proxy"
version = "1.2.0"
description = ""
authors = ["NI <opensource@ni.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ni_spec_server_proxy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
asgiref = "^3.8.1"
nisystemlink-clients = "^1.3.0"
systemlink-sdk = "^24.0.0"
python-dateutil = "^2.8.2"
aiohttp = "^3.8.5"
backoff = "^2.2.1"
six = "^1.15.0"
certifi = "^2024.0.0"
pyyaml = "^6.0.0"
pandas = "1.0.5"
numpy = "1.19.0"

[tool.poetry.scripts]
ni-spec-server-proxy = "ni_spec_server_proxy.main:run"

[[tool.poetry.source]]
name = "NI PyPI"
url = "https://pypi.ni.systems"
default = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
